compiler/tests/success/x86-64/vmovlpd.jazz
export
fn test_vmovlpd(reg u64 tmp) {
  reg u128 x;

  x = #set0_128();
  (u64) [tmp] = #VMOVLPD(x);
}

export
fn vmovlpd_to_stack(reg u128 x) -> reg u64 {
  stack u64 y;
  reg u64 z;
  y = #VMOVLPD(x);
  z = y;
  return z;
}
