compiler/tests/fail/typing/x86-64/return.jazz
export fn main() -> reg u256 {
  reg u64 x = 0;
  return x;
}
